--- a/Thesis.bib
+++ b/Thesis.bib
@@ -2810,7 +2810,14 @@ author = "S. Brandt and Ch. Peyrou and R. Sosnowski and A. Wroblewski"
       SLACcitation   = "%%CITATION = ARXIV:1104.3547;%%",
 }
 
-
+@article{CMS-DP-2012-012,
+      title         = "{Jet Energy Corrections and Uncertainties. Detector
+                       Performance Plots for 2012.}",
+      collaboration = "CMS Collaboration",
+      volume        = "CMS-DP-2012-012",
+      month         = "Jul",
+      year          = "2012",
+}
 
 % --- RA2 and related -------------------------------------
 @article{springerlink:10.1007/JHEP08(2011)155,
