--- a/Objects.tex
+++ b/Objects.tex
@@ -41,7 +41,7 @@ d_{ij} = \mathrm{min}(k_{T,i}^{2p}, k_{T,j}^{2p}) \frac{\Delta R_{ij}^2}{R^2}
 \begin{equation*}
 d_{iB} = k_{T,i}^{2p}
 \end{equation*}
-with the distance $d_{ij}$ between final state objects $i$ and $j$ carrying transverse momentum $k_T$ and the distance of the object to the beam $d_{iB}$. While $\Delta R_{ij}$ denotes the spatial separation in the $(\eta, \phi)$-plane, $R$ and $p$ are free parameters of the algorithm. The recombination is done by first calculating $d_{ij}$ and $d_{iB}$ for all objects in the final state by identifying the minimum value. If the minimum is $d_{ij}$, the two objects $i$ and $j$ are combined and all distances are computed again. However, if the minimum is $d_{iB}$, object $i$ is declared a jet and removed from the input list. This procedure is repeated until all objects are assigned. In this context the parameter $R$ acts as an angular cut-off and thus has a similar role as the jet radius in cone algorithms. Depending on the choice of the parameter $p$ different types of algorithms are distinguished which are all IRC safe. An illustration of an arbitrary example event where jets are clustered with the different jet algorithms is shown in Fig~\ref{fig:jet_algos}. The $k_T$-algorithm uses $p = 1$~\cite{PhysRevD.48.3160} and thus clusters soft particles first. This results mainly in irregular shaped jets (cf. Fig~\ref{fig:jet_algos}) and makes them sensitive to radiation in the event. Consequently, they are difficult to calibrate and therefore impratical to use at hadron colliders. The \textit{Cambride-Aachen}- or short \textit{CA}-algorithm~\cite{Dokshitzer:1997in, Wobisch:1998wt} utilizes $p = 0$. Thus, it does not rely on momentum information but clusters jets based on the angular separation of input objects. This allows a direct geometric interpretation of jets and makes this type of jet algorithm especially suited for analyses of jet substructure as will be discussed later in Section~\ref{sec:boosted_tops}. These jets do still reflect the structure of the parton shower, but are less affected by soft radiation than the $k_T$-algorithm. Finally, the \textit{anti-$k_T$}-algorithm uses $p = -1$~\cite{1126-6708-2008-04-063} and starts the jet clustering beginning with the hardest objects in the event. Hence, the evolution of the parton shower is not reproduced. The anti-$\mathrm{k_T}$ algorithm tends to form very regular shaped jets, as the four-momentum of the core of the jet is not much affected by the softer components which are clustered later in the process. Typically, the regular shape allows an easy calibration of anti-$\mathrm{k_T}$ jets.  
+with the distance $d_{ij}$ between final state objects $i$ and $j$ carrying transverse momentum $k_T$ and the distance of the object to the beam $d_{iB}$. While $\Delta R_{ij}$ denotes the spatial separation in the $(\eta, \phi)$-plane, $R$ and $p$ are free parameters of the algorithm. The recombination is done by first calculating $d_{ij}$ and $d_{iB}$ for all objects in the final state by identifying the minimum value. If the minimum is $d_{ij}$, the two objects $i$ and $j$ are combined and all distances are computed again. However, if the minimum is $d_{iB}$, object $i$ is declared a jet and removed from the input list. This procedure is repeated until all objects are assigned. In this context the parameter $R$ acts as an angular cut-off and thus has a similar role as the jet radius in cone algorithms. Depending on the choice of the parameter $p$ different types of algorithms are distinguished which are all IRC safe. An illustration of an arbitrary example event where jets are clustered with the different jet algorithms is shown in Fig~\ref{fig:jet_algos}. The $k_T$-algorithm uses $p = 1$~\cite{PhysRevD.48.3160} and thus clusters soft particles first. This results mainly in irregular shaped jets (cf. Fig~\ref{fig:jet_algos}) and makes them sensitive to radiation in the event. Consequently, they are difficult to calibrate and therefore impratical to use at hadron colliders. The \textit{Cambride-Aachen}- or short \textit{CA}-algorithm~\cite{Dokshitzer:1997in, Wobisch:1998wt} utilizes $p = 0$. Thus, it does not rely on momentum information but clusters jets based on the angular separation of input objects. This allows a direct geometric interpretation of jets and makes this type of jet algorithm especially suited for analyses of jet substructure as will be discussed later in Section~\ref{sec:boosted_tops}. These jets do still reflect the structure of the parton shower, but are less affected by soft radiation than the $k_T$-algorithm. Finally, the \textit{anti-$k_T$}-algorithm uses $p = -1$~\cite{1126-6708-2008-04-063} and starts the jet clustering beginning with the hardest objects in the event. Hence, the evolution of the parton shower is not reproduced. The anti-$\mathrm{k_T}$ algorithm tends to form very regular shaped jets, as the four-momentum of the core of the jet is not much affected by the softer components which are clustered later in the process. Typically, the regular shape allows an easy calibration of anti-$\mathrm{k_T}$ jets. 
 \end{description}
 
 \subsection{Jet Types at CMS}
@@ -51,7 +51,7 @@ with the distance $d_{ij}$ between final state objects $i$ and $j$ carrying tran
     \includegraphics[width=0.6\textwidth]{figures/calcFrac_Frac0_MC-1.pdf} 
   \end{tabular}
   \caption{Composition of the PF jet energy versus jet \pt in the barrel detector region $|\eta| < 1.3$ in simulated events (coloured histograms) and data (solid markers). Taken from~\cite{CMS-DP-2012-012}.}
-  \label{fig:btagging}
+  \label{fig:jets_pf_comp}
 \end{figure}
 \label{subsec:jets_types}
 The default jets to be used at the CMS experiment are jets clustered by the anti-$\mathrm{k_T}$ algorithm using a distance parameter of R = 0.5. This can be applied to reconstructed detector signals resulting in \textit{detector-level} jets or to final-state particles after hadronisation, as this is possible in simulated events, giving rise to \textit{particle-level} jets. Implementations of various jet algorithms are provided by the \textit{FastJet} package~\cite{Cacciari:2011ma, Cacciari:2005hq}. \\
@@ -59,14 +59,35 @@ Based on the information used from the various CMS subdetectors for the jet clus
 \begin{description}
  \item \textbf{Calorimeter (Calo) jets:} Calo jets are clustered from energy deposits in the calorimeters. For this purpose, calormeter towers are defined which consist of at least one HCAL cell and the geometrically associated ECAL cells. In case of the barrel detector region a calorimeter tower consists for instance of one HCAL cell and $\mathrm{5 \times 5}$ ECAL cells. The four-momentum of each tower is defined by the tower position as seen from the interaction point and the energy deposit in the tower above a certain threshold assuming a mass of zero. 
  \item \textbf{Jet-Plus-Track (JPT) jets:} JPT jets are reconstructed from calorimeter jets complemented by tracking information~\cite{CMS-PAS-JME-09-002}. Tracks of charged particles can be associated to calo jets based on the separation of the jet axis and the momentum vector of the track in the $(\eta,\phi)$-plane. Associated tracks are projected to the jet cone and are exploited to correct the jet energy and direction resulting in an improved jet response.
- \item \textbf{Particle-Flow (PF) jets:} PF jets are clustered from the four-momentum vectors of particle-flow candidates as identified by the PF algorithm described in Section~\ref{sec:pf_algo}. Typically, these types of jets show the best performance as the excellent resolution of the tracking system and the ECAL are utilized. Only neutral hadrons which consitute around 15\% of the jet energy (cf. Fig. ...) rely on the energy measurement of the HCAL with its relatively poor resolution. Thus, PF jets are the default jets to be used at the CMS experiment, as it is done within this thesis. 
+ \item \textbf{Particle-Flow (PF) jets:} PF jets are clustered from the four-momentum vectors of particle-flow candidates as identified by the PF algorithm described in Section~\ref{sec:pf_algo}. Typically, these types of jets show the best performance as the excellent resolution of the tracking system and the ECAL are utilized. Only neutral hadrons which consitute around 15\% of the jet energy (cf. Fig.~\ref{fig:jets_pf_comp}) rely on the energy measurement of the HCAL with its relatively poor resolution. Thus, PF jets are the default jets to be used at the CMS experiment, as it is done within this thesis. In order to mitigate influences from pile-up, charged hadrons unambigously associated to vertices other than the primary vertex can be subtracted from the event before performing the actual jet clustering. This technique is referred to as \textit{charged hadron subtraction} (CHS) and used as default throughout this thesis. 
 \end{description}
 
 \subsection{Jet Transverse-Momentum Response}
 \label{subsec:jets_response}
+In general, the jet transverse momentum as measured at detector level is not necessarily equal to the energy of the original particle due to for instance the limited detector resolution. This effect is quantified by the \textit{jet transverse-momentum response} R which is defined as 
+\begin{equation}
+  \mathrm{R} = \frac{\pt}{\pt^{\mathrm{particle}}} 
+  \label{eq:response}
+ \end{equation}
+where \pt denotes the transverse momentum of the jet measured at detector level and $\pt^{\rm{particle}}$ is the transverse momentum of the original particle-level jet. Thus, the jet response provides a measure of the fraction of the jet momentum visible in the detector compared to the actual momentum of the particle after hadronisation. \\
+The average response $\langle R \rangle$ is referred to as \textit{jet energy scale} (JES) and has to be calibrated such that $\langle R \rangle = 1$ for fixed $\pt^{\mathrm{particle}}$. The response usually depends on the jet momentum as well as on the pseudorapidity. This is expected since the quality of the jet measurement is directly related to the energy of the particles and the resolution of the detector sub-components. This is for instance caused by the specific track-reconstruction efficiency or the individual amount of detector material. \\
+Furthermore, the width of the response distribution corresponds to the relative \textit{jet transverse-momentum resolution} (JER) and hence is a function of \pt and $\eta$ as well. 
 
 \subsection{Jet Energy Calibration}
 \label{subsec:jets_calib}
+In order to relate the measured jet momentum on average to the momentum of the corresponding particle-level jet a jet calibration procedure is applied. Within the CMS experiment a factorized approach is utilized which is described in detail in~\cite{1748-0221-6-11-P11002}. \\
+The calibrated jet four-momentum vector $p^{cor}$ is obtained from the raw jet momentum four-vector $p^{raw}$ by scaling the raw momentum with a correction factor $C$ according to
+\begin{equation}
+p^{cor} = C \cdot p^{raw} = C_{\mathrm{offset}}(\pt^{raw}, \eta) \cdot C_{\mathrm{rel}}(\eta) \cdot C_{\mathrm{abs}}(\pt') \cdot C_{res}(\pt'', \eta) \cdot p^{raw}
+\end{equation} 
+ where $C$ is composed of the offset correction $C_{\mathrm{offset}}$, the calibration factors $C_{\mathrm{rel}}$ and $C_{\mathrm{abs}}$ as well as residual correction factors $C_{\mathrm{res}}$ applied to data. Each correction factor is applied sequentially after the other in a fixed order such that $\pt'$ denotes the transverse momentum after the application of the offset correction and $\pt''$ is the transverse momentum after all previous corrections. Some details for each individual correction are given in the following: 
+\begin{description}
+ \item \textbf{L1 Offset:} The L1 offset correction is designed to compensate for additional energy contributions arising from instrumental noise or pile-up events. The \pt offset is estimated in dependence of $\eta$, the effective jet area $A_j$ and the \pt-density $\rho$. The jet area is determined by adding a large number of inifinitely small four-momentum vectors to the event. The active jet area is hence defined as the region in the $(\eta, \phi)$-plane occupied by the soft particles after clustering them together with the true hard jet components. The \pt-density $\rho$ is defined on an event-by-event basis as the median of the distribution $\pt^{j}/A_{j}$ where $j$ denotes all reconstructed jets in the event. The offset in \pt is estimated from simulated QCD multijet events by directly comparing the jet momentum of a jet with and without pile-up overlaid.  
+ \item \textbf{L2 Relative $+$ L3 Absolute Correction:} The L2 relative correction is designed to make the jet energy scale uniform with respect to $\eta$ while the L3 absolute correction ensures a uniform response versus \pt. Both corrections are entirely estimated from simulated QCD multijet events. The correction is defined as the inverse of the average response $1/\langle R \rangle$.
+ \item \textbf{L2L3 Residual Correction:} In order to compensate for remaining response differences between simulated events and data, residual correction factors are derived. These are applied to data only and correct for remaining differences in the data-to-simulation ratio of the relative jet energy scale. Such corrections can be derived from events featuring a momentum balance in the transverse plane like dijet events (used for the L2 residual determination) or $\mathrm{Z/\gamma+jet}$ events (used for the measurement of the L3 residual correction).
+\end{description}
+The calibration factors are obtained with respect to the average flavour composition of a QCD mulitjet sample. Thus, further steps of correction factors can be applied for specific analysis purposes correcting e.g. the different response for various jet flavours.  However, such higher order corrections are not used in this thesis. \\ 
+The actual set of correction factors used in this thesis is documented in~\cite{CMS-DP-2013-033} and illustrated in Fig. ... \todo{Fig. JEC}. In total, the size of the JES corrections are at the order of ... \todo{size of JEC}.
 
 \section{Identification of b-Quark Jets}
 \label{sec:btagging}
