--- a/Theory.tex
+++ b/Theory.tex
@@ -178,9 +178,9 @@ Some example diagrams for the production modes of such processes at parton level
 \begin{figure}[!tp]
   \centering 
   \begin{tabular}{cc}
-    \includegraphics[width=0.7\textwidth]{figures/CMS_CMSSM.png} 
+    \includegraphics[width=0.7\textwidth]{figures/CMS_SUSY_2011Limits5fb_tanb10.pdf} 
   \end{tabular}
-  \caption{Interpretation of searches for supersymmetry at the CMS experiment within the CMSSM. Shown are the 95\% CL exclusion limits in the $m_0$ and $m_{1/2}$ plane for various searches performed using different final state topologies~\cite{deJong:2012zt}.}
+  \caption{Interpretation of searches for supersymmetry at the CMS experiment within the CMSSM. Shown are the 95\% CL exclusion limits in the $m_0$ and $m_{1/2}$ plane for various searches performed using different final state topologies~\cite{bib:CMS:PhysicsResultsSUS}.}
   \label{fig:CMSSM_7TeV}
 \end{figure}
 \begin{figure}[!tp]
