--- a/Thesis.bib
+++ b/Thesis.bib
@@ -2819,6 +2819,16 @@ author = "S. Brandt and Ch. Peyrou and R. Sosnowski and A. Wroblewski"
       year          = "2012",
 }
 
+@article{CMS-DP-2013-033,
+      title         = "{8 TeV Jet Energy Corrections and
+Uncertainties based on
+                       19.8 fb$^{-1}$ of data in CMS}",
+      collaboration = "CMS Collaboration",
+      volume        = "CMS-DP-2013-033",
+      month         = "Oct",
+      year          = "2013",
+}
+
 % --- RA2 and related -------------------------------------
 @article{springerlink:10.1007/JHEP08(2011)155,
    collaboration = {CMS},
@@ -2877,9 +2887,9 @@ author = "S. Brandt and Ch. Peyrou and R. Sosnowski and A. Wroblewski"
   collaboration = {CMS},
   title         = {CMS Supersymmetry Physics Results},
   journal       = {Public CMS Wiki},
-  note          = {https://twiki.cern.ch/twiki/bin/view/CMSPublic/PhysicsResultsSUS, Topic revision: r91},
+  note          = {https://twiki.cern.ch/twiki/bin/view/CMSPublic/PhysicsResultsSUS, Topic revision: r15},
   url           = {https://twiki.cern.ch/twiki/bin/view/CMSPublic/PhysicsResultsSUS},
-  year          = {2012}
+  year          = {2014}
 }
 
 @article{PhysRevLett.101.221803,
