--- a/Thesis.bib
+++ b/Thesis.bib
@@ -2829,6 +2829,105 @@ Uncertainties based on
       year          = "2013",
 }
 
+@phdthesis{thesis:Schroeder,
+      author    = "M. Schr{\"o}der",
+      title     = "Quality of Jet Measurements and Impact on a Search for New Physics at CMS",
+      school    = "Universit{\"a}t Hamburg",
+      address   = "Germany",
+      note      = "DESY-THESIS-2012-042",
+      year      = "2012"
+}
+
+@Article{CMS-AN-2010-141,
+      author  = "{F. Pandolfi, D. del Re, M. Voutilainen}",
+      title       = "Jet Response and Resolution Measurement with Photon+Jet Events at $\sqrt{s}=7$ TeV",
+      year        = "2010",
+      JOURNAL     = "CMS AN-2010/141"
+}
+
+@Article{CMS-AN-2011-004,
+      author  = "{F. Pandolfi, D. del Re, M. Voutilainen}",
+      title       = "Update on Jet Response and Resolution Measurements with Photon+Jet Events at $\sqrt{s}=7$ TeV",
+      year        = "2011",
+      JOURNAL     = "CMS AN-2011/004"
+}
+
+@Article{CMS-AN-2013-179,
+      author = "T. Lenz and C. Sander and P. Schleper and M. Schroder and H. Stadie",
+      title = "Jet Energy Resolution Measurement using Photon+Jet Events at $\sqrt{s}=8$~TeV",
+      year = "2013",
+      journal = "CMS AN-2013/179" 
+}
+
+@article{oai:arXiv.org:hep-ex/0012046,
+      author         = "Abbott, B. and others",
+      title          = "{High-$p_T$ jets in $\bar{p}p$ collisions at $\sqrt{s} =
+                        630$ GeV and 1800 GeV}",
+      collaboration  = "D0",
+      journal        = "Phys.Rev.",
+      volume         = "D64",
+      pages          = "032003",
+      doi            = "10.1103/PhysRevD.64.032003",
+      year           = "2001",
+      eprint         = "hep-ex/0012046",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "FERMILAB-PUB-00-216-E",
+      SLACcitation   = "%%CITATION = HEP-EX/0012046;%%",
+}
+
+@article{JetsD0,
+      author         = "Abazov, Victor Mukhamedovich and others",
+      title          = "{Measurement of the inclusive jet cross section in $p
+                        \bar {p}$ collisions at $\sqrt{s}=1.96$ TeV}",
+      collaboration  = "D0",
+      journal        = "Phys.Rev.",
+      volume         = "D85",
+      pages          = "052006",
+      doi            = "10.1103/PhysRevD.85.052006",
+      year           = "2012",
+      eprint         = "1110.3771",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "FERMILAB-PUB-11-547-E",
+      SLACcitation   = "%%CITATION = ARXIV:1110.3771;%%",
+}
+
+@article{Aad:2012ag,
+      author  = "Aad, Georges and others",
+      title   = "{Jet energy resolution in proton-proton collisions at $\sqrt{s}=7$ TeV recoreded in 2010 with the ATLAS detector}",
+      collaboration = "ATLAS",
+      journal = "Eur.Phys.J.",  
+      volume  = "C73",
+      pages   = "2306",
+      doi     = "10.1140/epjc/s10052-013-2306-0",
+      year    = "2013",
+      eprint  = "1210.6210",
+      archivePrefix = "arXiv",
+      primaryClass  = "hep-ex",
+      reportNumber  = "CERN-PH-EP-2012-191"
+}
+
+@misc{website:HamburgCalib,
+      title="Hamburg Wiki Calibration",
+      month="Jan.",
+      year="2014",
+      howpublished = "\url{https://twiki.cern.ch/twiki/bin/viewauth/CMS/HamburgWikiAnalysisCalibration}",
+}
+
+@article{Minuit,
+      author         = "James, F. and Roos, M.",
+      title          = "{Minuit: A System for Function Minimization and Analysis
+                        of the Parameter Errors and Correlations}",
+      journal        = "Comput.Phys.Commun.",
+      volume         = "10",
+      pages          = "343-367",
+      doi            = "10.1016/0010-4655(75)90039-9",
+      year           = "1975",
+      reportNumber   = "CERN-DD-75-20",
+      SLACcitation   = "%%CITATION = CPHCB,10,343;%%",
+}
+
 % --- RA2 and related -------------------------------------
 @article{springerlink:10.1007/JHEP08(2011)155,
    collaboration = {CMS},
