--- a/Objects.tex
+++ b/Objects.tex
@@ -87,7 +87,7 @@ p^{cor} = C \cdot p^{raw} = C_{\mathrm{offset}}(\pt^{raw}, \eta) \cdot C_{\mathr
  \item \textbf{L2L3 Residual Correction:} In order to compensate for remaining response differences between simulated events and data, residual correction factors are derived. These are applied to data only and correct for remaining differences in the data-to-simulation ratio of the relative jet energy scale. Such corrections can be derived from events featuring a momentum balance in the transverse plane like dijet events (used for the L2 residual determination) or $\mathrm{Z/\gamma+jet}$ events (used for the measurement of the L3 residual correction).
 \end{description}
 The calibration factors are obtained with respect to the average flavour composition of a QCD mulitjet sample. Thus, further steps of correction factors can be applied for specific analysis purposes correcting e.g. the different response for various jet flavours.  However, such higher order corrections are not used in this thesis. \\ 
-The actual set of correction factors used in this thesis is documented in~\cite{CMS-DP-2013-033} and illustrated in Fig. ... \todo{Fig. JEC}. In total, the size of the JES corrections are at the order of ... \todo{size of JEC}.
+The actual set of correction factors used in this thesis, if not stated otherwise, is documented in~\cite{CMS-DP-2013-033} and illustrated in Fig. ... \todo{Fig. JEC}. In total, the size of the JES corrections are at the order of ... \todo{size of JEC}.
 
 \section{Identification of b-Quark Jets}
 \label{sec:btagging}
