--- a/Thesis.bib
+++ b/Thesis.bib
@@ -3663,6 +3663,16 @@ Uncertainties based on
      year          = {2012},
 }
 
+@techreport{CMS-PAS-LUM-13-001,
+      title         = "{CMS Luminosity Based on Pixel Cluster Counting - Summer
+                       2013 Update}",
+      institution   = "CERN",
+      collaboration = "CMS Collaboration",
+      address       = "Geneva",
+      number        = "CMS-PAS-LUM-13-001",
+      year          = "2013",
+}
+
 @ARTICLE{CMS-PAS-PFT-09-001,
      Collaboration = {CMS},
      TITLE        = "Particle-Flow Event Reconstruction in CMS and Performance for Jets, Taus, and $E^\text{miss}_{T}$",
