--- a/Thesis.bib
+++ b/Thesis.bib
@@ -2928,6 +2928,23 @@ Uncertainties based on
       SLACcitation   = "%%CITATION = CPHCB,10,343;%%",
 }
 
+@article{Khachatryan:2011wq,
+      author         = "Khachatryan, Vardan and others",
+      title          = "{Measurement of $B\bar{B}$ Angular Correlations based on
+                        Secondary Vertex Reconstruction at $\sqrt{s}=7$ TeV}",
+      collaboration  = "CMS Collaboration",
+      journal        = "JHEP",
+      volume         = "1103",
+      pages          = "136",
+      doi            = "10.1007/JHEP03(2011)136",
+      year           = "2011",
+      eprint         = "1102.3194",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-10-093, CMS-BPH-10-010",
+      SLACcitation   = "%%CITATION = ARXIV:1102.3194;%%",
+}
+
 % --- RA2 and related -------------------------------------
 @article{springerlink:10.1007/JHEP08(2011)155,
    collaboration = {CMS},
