--- a/Thesis.bib
+++ b/Thesis.bib
@@ -2297,6 +2297,15 @@ primaryClass   = "hep-ph"
  year          = {2008}
 }
 
+@article{bib:AN2013-416,
+ author = {Kristin Goebel and Johannes Haller and Jochen Ott and Hartmut Stadie},
+ title = {Jet Transverse Momentum Resolution Measurement using Dijet Events at $\sqrt{s} = 8$\tev},
+ journal       = {CMS Analysis Note},
+ volume        = {CMS-AN-13-416},
+ note = {Internal documentation},
+ year          = {2013}
+}
+
 @article{bib:CMS:FlavourTagging,
   collaboration = {CMS},
   title         = {Jet Flavour identification (MC truth)},
